--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@react-leaflet/core": "^3.0.0",
     "@types/leaflet": "^1.9.21",
     "leaflet": "^1.9.4",
+    "puppeteer": "^24.33.0",
+    "puppeteer-cluster": "^0.25.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-leaflet": "^5.0.0",
