--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@react-leaflet/core": "^3.0.0",
     "@types/leaflet": "^1.9.21",
     "leaflet": "^1.9.4",
+    "maplibre-gl": "^5.14.0",
     "puppeteer": "^24.33.0",
     "puppeteer-cluster": "^0.25.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-leaflet": "^5.0.0",
     "react-leaflet-cluster": "^4.0.0",
+    "react-map-gl": "^8.1.0",
     "supercluster": "^8.0.1"
   },
   "devDependencies": {
