--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -62,4 +62,4 @@ jobs:
           packageName: com.allofdaniel.churchfinder
           releaseFiles: android/app/build/outputs/bundle/release/app-release.aab
           track: internal
-          status: completed
+          status: draft
