--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -1,4 +1,4 @@
-name: Build APK
+name: Build APK (Local)
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
       - name: Checkout
@@ -17,13 +17,17 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '22'
-          cache: 'npm'
 
       - name: Setup Java
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '21'
+
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v4
+        with:
+          cache-read-only: false
 
       - name: Install dependencies
         run: npm ci
@@ -35,17 +39,20 @@ jobs:
         run: npx cap sync android
 
       - name: Decode keystore
+        shell: bash
         run: |
           echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 -d > android/app/release.keystore
 
       - name: Build APK
         working-directory: android
+        shell: bash
         run: |
           chmod +x gradlew
           ./gradlew assembleRelease
 
       - name: Get version
         id: version
+        shell: bash
         run: |
           VERSION=$(grep -oP 'versionName "\K[^"]+' android/app/build.gradle)
           VERSION_CODE=$(grep -oP 'versionCode \K\d+' android/app/build.gradle)
@@ -62,7 +69,7 @@ jobs:
       - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
-          tag_name: v${{ steps.version.outputs.version }}-${{ github.run_number }}
+          tag_name: v${{ steps.version.outputs.version }}-build${{ github.run_number }}
           name: v${{ steps.version.outputs.version }} (Build ${{ github.run_number }})
           body: |
             ## Changes
