--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -8,6 +8,9 @@ on:
 jobs:
   build:
     runs-on: self-hosted
+    env:
+      ANDROID_HOME: C:\Users\allof\AppData\Local\Android\Sdk
+      ANDROID_SDK_ROOT: C:\Users\allof\AppData\Local\Android\Sdk
 
     steps:
       - name: Checkout
